Renombrar campo de beneficiario a notas

--- a/src/cementerio/templates/cementerio/terrenos/terrenosdetalle.html
+++ b/src/cementerio/templates/cementerio/terrenos/terrenosdetalle.html
@@ -33,7 +33,7 @@
                             </a>
                         </p>
 
-                        <p><strong>Notas :</strong> {{ terreno.beneficiario | default:'' }}</p>
+                        <p><strong>Notas :</strong> {{ terreno.notas | default:'' }}</p>
 
                         <p><strong>Fecha de registro:</strong> {{ terreno.fecha_regitro }}</p>
 
