--- a/cementerio/templates/cementerio/terrenos/terrenos.html
+++ b/cementerio/templates/cementerio/terrenos/terrenos.html
@@ -100,6 +100,11 @@
                                     </li>
                                     {% if page_obj.has_next %}
                                     <li class="page-item">
+                                        <a class="page-link" href="?page={{ page_obj.num_pages }}">
+                                            {{ page_obj.paginator.num_pages }}
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
                                         <a class="page-link" href="?page={{ page_obj.next_page_number }}">
                                             Siguiente
                                         </a>
