--- a/cementerio/templates/cementerio/difuntos/difuntos.html
+++ b/cementerio/templates/cementerio/difuntos/difuntos.html
@@ -20,7 +20,7 @@
                                     <div class="col-md-12">
                                         <div class="input-group">
                                             <input type="text" id="input1-group2" name="q"
-                                                   class="form-control" placeholder="Nombre">
+                                                   class="form-control" placeholder="Nombre" value="{{ q | default:'' }}">
                                             <span class="input-group-btn">
                                                         <button type="submit" class="btn btn-primary"><i
                                                                 class="fa fa-search"></i> Buscar
@@ -65,7 +65,7 @@
                                 <ul class="pagination">
                                     {% if page_obj.has_previous %}
                                     <li class="page-item">
-                                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+                                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}&q={{ q | default:'' | urlencode }}">
                                             Anterior
                                         </a>
                                     </li>
@@ -74,18 +74,18 @@
                                     </li>
                                     {% endif %}
                                     <li class="page-item active" aria-current="page">
-                                        <a class="page-link" href="?page={{ page_obj.number }}">
+                                        <a class="page-link" href="?page={{ page_obj.number }}&q={{ q | default:'' | urlencode }}">
                                             {{ page_obj.number }}
                                         </a>
                                     </li>
                                     {% if page_obj.has_next %}
                                     <li class="page-item">
-                                        <a class="page-link" href="?page={{ page_obj.num_pages }}">
+                                        <a class="page-link" href="?page={{ page_obj.num_pages }}&q={{ q | default:'' | urlencode }}">
                                             {{ page_obj.paginator.num_pages }}
                                         </a>
                                     </li>
                                     <li class="page-item">
-                                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+                                        <a class="page-link" href="?page={{ page_obj.next_page_number }}&q={{ q | default:'' | urlencode }}">
                                             Siguiente
                                         </a>
                                     </li>
