Reparar paginador con texto de busqueda

--- a/cementerio/templates/cementerio/clientes/clientes.html
+++ b/cementerio/templates/cementerio/clientes/clientes.html
@@ -80,7 +80,7 @@
                                     </a>
                                 </li>
                                 <li class="page-item">
-                                    <a class="page-link" href="?page=1">1</a>
+                                    <a class="page-link" href="?page=1&q={{ q | default:'' | urlencode }}">1</a>
                                 </li>
                                 {% endif %}
                                 <li class="page-item active" aria-current="page">
@@ -90,7 +90,7 @@
                                 </li>
                                 {% if page_obj.has_next %}
                                 <li class="page-item">
-                                    <a class="page-link" href="?page={{ page_obj.num_pages }}&q={{ q | default:''| urlencode }}">
+                                    <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}&q={{ q | default:''| urlencode }}">
                                         {{ page_obj.paginator.num_pages }}
                                     </a>
                                 </li>
