--- a/cementerio/templates/cementerio/clientes/clientes.html
+++ b/cementerio/templates/cementerio/clientes/clientes.html
@@ -17,7 +17,7 @@
                     <div class="card-body">
                         <form action="" method="get" class="form-horizontal">
                             <div class="form-group row">
-                                <div class="col-sm-12 col-md-6">
+                                <div class="col-sm-12 col-md-6 mb-2">
                                     {% if perms.cementerio.add_cliente %}
                                     <a href="{% url 'cementerio:clientesagregar' %}" class="btn btn-block btn-primary">
                                         Agregar cliente
